# htop-gpu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  demo.tape
htop_gpu/: __init__.py  cli.py
